--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "core-js": "^2.6.5",
     "tailwindcss": "^1.4.6",
     "vue": "^2.6.10",
+    "vue-analytics": "^5.22.1",
     "vue-router": "^3.3.4",
     "vuex": "^3.4.0"
   },
